Don't use List.getFirst() since it doesn't exist in Java 17